--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@types/yandex-maps": "^2.1.36",
+    "axios": "^1.8.4",
+    "framer-motion": "^12.5.0",
     "next": "15.2.0",
-    "next-gallery": "^2.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
+    "react-medium-image-zoom": "^5.2.14",
+    "react-modal": "^3.16.3",
     "sass": "^1.86.0"
   },
   "devDependencies": {
@@ -22,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-image-gallery": "^1.2.4",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "prettier": "3.5.3",
