--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-image-gallery": "^1.4.0",
-    "react-medium-image-zoom": "^5.2.14",
-    "react-modal": "^3.16.3",
+    "react-imask": "^7.6.1",
     "sass": "^1.86.0"
   },
   "devDependencies": {
@@ -27,6 +26,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-image-gallery": "^1.2.4",
+    "@types/react-input-mask": "^3.0.6",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "prettier": "3.5.3",
