--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/yandex-maps": "^2.1.36",
     "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
     "next": "15.2.0",
@@ -22,13 +21,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@next/bundle-analyzer": "^15.2.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-image-gallery": "^1.2.4",
     "@types/react-input-mask": "^3.0.6",
+    "@types/yandex-maps": "^2.1.36",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
+    "next-devtools": "^0.0.1",
     "prettier": "3.5.3",
     "typescript": "^5"
   }
